@@ -4,6 +4,11 @@ SpigotMC Plugin that gives you the ability to tame foxes!
 </p>
 
 ### WARNING: Do not reload the plugin, you may loose foxes!!
+#### NOTE: IF YOU ARE RUNNING JAVA 16, YOU NEED TO ADD SOME STUFF TO YOUR PROGRAM ARGUMENTS IN YOUR SERVER START SCRIPT:
+```bash
+--add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+```
+
 <br>
 If you get any errors, [create an issue](https://github.com/SeanOMik/TamableFoxes/issues/new)!<br><br>
 Have you ever wanted to tame foxes? Well, now you can! Use chicken to tame and sweet berries to breed them!<br><br>
